--- a/doc/themes/sg-doc/static/css/theme-stackgres.css
+++ b/doc/themes/sg-doc/static/css/theme-stackgres.css
@@ -527,6 +527,13 @@ img.border {
     text-transform: uppercase;
 }
 
+.warning {
+    border: 1px solid red;
+    border-radius: 5px;
+    padding: 10px;
+    background: rgb(255 0 0 / 5%);
+}
+
 /* Lightmode Fixes */
 pre code {
     color: var(--textColor);
