fix(ui): order cluster events by firstTimestamp

--- a/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/sg-1.0.css
@@ -446,8 +446,8 @@ table.crdDetails td, table.crdDetails th, .paramDetails td, .paramDetails th {
 }
 
 table.crdDetails td.label {
-    width: 20vw;
     font-weight: bold;
+    white-space: nowrap;
 }
 
 table.crdDetails td a {
