doc(ui): show search form and version dropdown on mobile

--- a/doc/themes/sg-doc/static/css/theme-stackgres.css
+++ b/doc/themes/sg-doc/static/css/theme-stackgres.css
@@ -463,6 +463,10 @@ input[type="submit"] {
     display: inline-block;
 }
 
+.textLeft {
+    text-align: left;
+}
+
 .textCenter {
     text-align: center;
 }
@@ -528,10 +532,10 @@ img.border {
 }
 
 .warning {
-    border: 1px solid red;
+    border: 1px solid var(--lOrange);
     border-radius: 5px;
     padding: 10px;
-    background: rgb(255 0 0 / 5%);
+    background: rgb(255 158 23 / 5%);
 }
 
 /* Lightmode Fixes */
@@ -1718,8 +1722,12 @@ code.language-bash {
         background: var(--bgColor);
         z-index: 999;
     }
+
     #sidebar.show {
+        top: 0;
+        padding-top: 100px;
         left: 0;
+        overflow-y: auto;
         transition: left .3s ease-out;
     }
 
@@ -1729,13 +1737,17 @@ code.language-bash {
         margin-top: 5px;
     }
 
-    #sidebar #header-wrapper, #sidebar-toggle-span {
-        display: none;
+    #sidebar-toggle-span, .ps-container>.ps-scrollbar-y-rail, .ps-container>.ps-scrollbar-x-rail, .ps-container>.ps-scrollbar-y-rail>.ps-scrollbar-y, .ps-container>.ps-scrollbar-x-rail>.ps-scrollbar-x {
+        display: none !important;
     }
 
     p code, td, td code {
         white-space: inherit;
         word-break: inherit;
+    }
+
+    #sidebar > .highlightable {
+        height: auto !important;
     }
 
 }
