doc(ui): enable accordion-like function on sidebar items

--- a/doc/themes/sg-doc/layouts/partials/menu.html
+++ b/doc/themes/sg-doc/layouts/partials/menu.html
@@ -108,6 +108,7 @@
       </a>
       {{ $numberOfPages := (add (len .Pages) (len .Sections)) }}
       {{ if ne $numberOfPages 0 }}
+        <span class="toggleToc" onclick="toggleToc()"></span>
         <ul>
           {{ $currentNode.Scratch.Set "pages" .Pages }}
           {{ if .Sections}}
